Add plot for pl

--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/plots.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/plots.yaml
@@ -1,9 +1,9 @@
 plots:
-- var: "t"
-  selection: {'time':0, 'isobaricInhPa':0}
+- var: "r"
+  selection: {"time": 720, "isobaricInhPa": 1}
   coarsen: {latitude: 16, longitude: 16}
   plot_kwargs: {
-    'vmax':320,
-    'vmin':230,
-    'cmap':"RdBu_r"
+    'vmax': 120,
+    'vmin': -20,
+    'cmap': "BrBG"
   }
