Update thumbnail with daily mean and extent

--- a/catalogue/era5/reanalysis-era5-land/plots.yaml
+++ b/catalogue/era5/reanalysis-era5-land/plots.yaml
@@ -1,8 +1,8 @@
 plots:
 - var: "t2m"
-  selection: {'valid_time': 258606}
+  sel: {"valid_time": "1972-07-03T06:00"}
   plot_kwargs: {
-    'vmax':320,
-    'vmin':230,
-    'cmap':"RdBu_r"
+    "vmax": 320,
+    "vmin": 230,
+    "cmap": "RdBu_r"
   }
