Era5 ingestion work in progress in two steps

--- a/catalogue/era5/reanalysis-era5-land/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-land/ingestion/ingestion-steps.yaml
@@ -1,8 +1,5 @@
 steps:
-- chunks: {latitude: 256, longitude: 256}
-  request_client_class_name: cads-api-client
-  robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 96}
-  to_zarr_kwargs: {store: 's3://ecmwf-era5-land/intermediate/reanalysis-era5-land-no-antartica.zarr', write_empty_chunks: false}
+- request_client_class_name: cads-api-client
   xarray_open_kwargs:
     cache_kwargs: {cache_file: false}
     open_dataset_kwargs:
@@ -12,20 +9,59 @@ steps:
     filename_or_obj:
       area: ['90', '0', '-57.1', '360']
       collection_id: reanalysis-era5-land
-      date: [1950-01-01/2023-10-31]
+      date: [1950-01-01/2023-12-31]
       time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
-      variable: [2m_temperature, total_precipitation, 10m_u_component_of_wind, 10m_v_component_of_wind, surface_solar_radiation_downwards]
+      variable: [
+        'volumetric_soil_water_layer_1',
+        'volumetric_soil_water_layer_2',
+        'volumetric_soil_water_layer_3',
+        'volumetric_soil_water_layer_4',
+        'soil_temperature_level_1',
+        'soil_temperature_level_2',
+        'soil_temperature_level_3',
+        'soil_temperature_level_4',
+        'skin_temperature',
+        '2m_dewpoint_temperature',
+        '2m_temperature',
+        'snow_albedo',
+        'snow_cover',
+        'snow_density',
+        'snow_depth',
+        'snow_depth_water_equivalent',
+        'temperature_of_snow_layer',
+        'snowfall',
+        'snowmelt',
+        'skin_reservoir_content',
+        'surface_sensible_heat_flux',
+        'surface_latent_heat_flux',
+        'surface_net_solar_radiation',
+        'surface_net_thermal_radiation',
+        'surface_solar_radiation_downwards',
+        'surface_thermal_radiation_downwards',
+        'forecast_albedo',
+        'total_evaporation',
+        'evaporation_from_bare_soil',
+        'evaporation_from_open_water_surfaces_excluding_oceans',
+        'evaporation_from_the_top_of_canopy',
+        'evaporation_from_vegetation_transpiration',
+        'snow_evaporation',
+        'potential_evaporation',
+        'runoff',
+        'surface_runoff',
+        'sub_surface_runoff',
+        '10m_u_component_of_wind',
+        '10m_v_component_of_wind',
+        'surface_pressure',
+        'total_precipitation',
+        'leaf_area_index_high_vegetation',
+        'leaf_area_index_low_vegetation'
+      ]
     request_chunker_kwargs: {time_dim: valid_time}
     request_chunks: {day: 5}
-- chunks: {latitude: 64, longitude: 64, valid_time: 2880}
-  robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 96}
-  to_zarr_kwargs:
-    store: 's3://ecmwf-era5-land/reanalysis-era5-land-no-antartica-v0.zarr'
+
+  chunks: { latitude: 256, longitude: 256 }
+  robust_to_zarr_kwargs: { time_dim: valid_time, time_restart_block: 1 }
+  to_zarr_kwargs: {
+    store: 's3://ecmwf-era5-land/intermediate/reanalysis-era5-land-no-antartica.zarr',
     write_empty_chunks: false
-    consolidated: true
-  xarray_open_kwargs:
-    engine: zarr
-    filename_or_obj: s3://ecmwf-era5-land/intermediate/reanalysis-era5-land-no-antartica.zarr
-    consolidated: false
-    chunks: {}
-    drop_variables: [ssr]
+  }
