--- a/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/ingestion-steps.yaml
@@ -13,29 +13,30 @@ steps:
       time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
       product_type: reanalysis
       pressure_level: [1000, 925, 850, 700, 600, 500, 400, 300, 250, 200, 150, 100, 70, 50, 30, 20, 10, 5, 1]
-      variable: [temperature] #total_precipitation, 10m_u_component_of_wind, 10m_v_component_of_wind, 2m_dewpoint_temperature]
-      # mean_sea_level_pressure, mean_wave_direction, mean_wave_period, sea_surface_temperature, significant_height_of_combined_wind_waves_and_swell, surface_pressure]
+      variable: [
+        'divergence',
+        'fraction_of_cloud_cover',
+        'geopotential',
+        'ozone_mass_mixing_ratio',
+        'potential_vorticity',
+        'relative_humidity',
+        'specific_cloud_ice_water_content',
+        'specific_cloud_liquid_water_content',
+        'specific_humidity',
+        'specific_rain_water_content',
+        'specific_snow_water_content',
+        'temperature',
+        'u_component_of_wind',
+        'v_component_of_wind',
+        'vertical_velocity',
+        'vorticity'
+      ]
     request_chunker_kwargs: {time_dim: valid_time}
-    request_chunks: {day: 10, pressure_level: 1}
+    request_chunks: {day: 5, pressure_level: 1}
 
   chunks: {latitude: 256, longitude: 256}
-  robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 12, time_range: [null, '1949-12-31']}
+  robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 1} #time_range: [null, '1942-12-31']
   to_zarr_kwargs: {
     store: s3://ecmwf-era5-pressure-levels-tmp/reanalysis-era5-pressure-levels-v0.zarr,
     write_empty_chunks: false
   }
-
-
-- xarray_open_kwargs:
-    chunks: {valid_time: 4320}
-    engine: zarr
-    filename_or_obj: s3://ecmwf-era5-pressure-levels-tmp/reanalysis-era5-pressure-levels-v0.zarr
-
-  chunks: {latitude: 64, longitude: 64, valid_time: 4320}
-  robust_to_zarr_kwargs:
-    time_dim: valid_time
-    time_restart_block: 12
-    time_range: [null, '1949-12-31']
-  to_zarr_kwargs: {store: s3://ecmwf-era5-pressure-levels/reanalysis-era5-pressure-levels-v0.zarr,
-    write_empty_chunks: false}
-
