--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/plots.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/plots.yaml
@@ -1,5 +1,6 @@
 plots:
 - var: "r"
+  time_dim: "time"
   selection: {"time": 720, "isobaricInhPa": 1}
   coarsen: {latitude: 16, longitude: 16}
   plot_kwargs: {
