--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
@@ -10,12 +10,14 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:abstract: High resolution Climate DT daily on ocean single levels - SSP3-7.0 - IFS-NEMO
+  dc:abstract: High resolution Climate DT daily on ocean single levels - SSP3-7.0
+    - IFS-NEMO
   dc:access_rights: free of charge
   dc:title: High resolution Climate DT daily on ocean single levels - SSP3-7.0 - IFS-NEMO
-  dc:description: High resolution Climate DT daily on ocean single levels - SSP3-7.0 - IFS-NEMO
+  dc:description: High resolution Climate DT daily on ocean single levels - SSP3-7.0
+    - IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
-  end_datetime: '2029-09-08T00:00:00Z'
+  end_datetime: '2029-12-31T00:00:00Z'
   dc:subject:
   - DestinE
   - ECMWF
@@ -55,10 +57,10 @@ properties:
       type: data
       description: Time-mean sea surface temperature
       unit: K
-  dc:extent: 950 GB
+  dc:extent: 981 GB
 assets:
   data:
-    href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-daily-v0.zarr
+    href: https://data.earthdatahub.com/destine-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
