--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -14,7 +14,7 @@ bbox:
 - 90.0
 properties:
   start_datetime: '1950-01-01T00:00:00Z'
-  end_datetime: '2023-10-31T23:00:00Z'
+  end_datetime: '2023-12-31T23:00:00Z'
   edh:maturity: published
   dc:abstract: Europe ERA5-Land hourly data from 1950 to 2023
   dc:access_rights: free of charge
@@ -44,22 +44,86 @@ properties:
       reference_system: 4326
       step: 0.1
   cube:variables:
-    u10:
+    asn:
       dimensions:
       - valid_time
       - latitude
       - longitude
       type: data
-      description: 10 metre U wind component
-      unit: m s**-1
-    v10:
+      description: Snow albedo
+      unit: (0 - 1)
+    d2m:
       dimensions:
       - valid_time
       - latitude
       - longitude
       type: data
-      description: 10 metre V wind component
-      unit: m s**-1
+      description: 2 metre dewpoint temperature
+      unit: K
+    lai_hv:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Leaf area index, high vegetation
+      unit: m**2 m**-2
+    lai_lv:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Leaf area index, low vegetation
+      unit: m**2 m**-2
+    rsn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow density
+      unit: kg m**-3
+    sde:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow depth
+      unit: m
+    sf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snowfall
+      unit: m of water equivalent
+    smlt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snowmelt
+      unit: m of water equivalent
+    snowc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow cover
+      unit: '%'
+    ssrd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface short-wave (solar) radiation downwards
+      unit: J m**-2
     t2m:
       dimensions:
       - valid_time
@@ -76,7 +140,31 @@ properties:
       type: data
       description: Total precipitation
       unit: m
-  dc:extent: 54.9 TB
+    tsn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Temperature of snow layer
+      unit: K
+    u10:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre U wind component
+      unit: m s**-1
+    v10:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre V wind component
+      unit: m s**-1
+  dc:extent: 206.2 TB
 assets:
   data:
     href: https://data.earthdatahub.com/era5/reanalysis-era5-land-no-antartica-v1.zarr
