--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
@@ -10,9 +10,9 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, daily data on ocean and sea-ice, HR
-  dc:abstract: High resolution Climate DT daily on ocean single levels - SSP3-7.0
-    - IFS-NEMO
+  dc:abstract: This dataset contains a selection of the variables available from the 
+  DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`) 
+  from the IFS-NEMO model at high resolution on ocean variables
   dc:access_rights: free of charge
   dc:description: High resolution Climate DT daily on ocean single levels - SSP3-7.0
     - IFS-NEMO
