--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
@@ -10,7 +10,6 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, hourly data on single levels, HR
   dc:abstract: High resolution Climate DT hourly on single levels - SSP3-7.0 - IFS-NEMO
   dc:access_rights: free of charge
   dc:description: High resolution Climate DT hourly on single levels - SSP3-7.0 -
@@ -104,7 +103,31 @@ properties:
       type: data
       description: 10 metre V wind component
       unit: m s**-1
-  dc:extent: 141.2 TB
+    d2m:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: 2 metre dewpoint temperature
+      unit: K
+    ssr:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net short-wave (solar) radiation
+      unit: J m**-2
+    str:
+      dimensions:
+      - time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net long-wave (thermal) radiation
+      unit: J m**-2
+  dc:extent: 82.4 TB
 assets:
   data:
     href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
