--- a/catalogue/era5/__collection__.yaml
+++ b/catalogue/era5/__collection__.yaml
@@ -2,7 +2,7 @@ title: ERA5, ECMWF fifth generation reanalysis
 dc:abstract:
   ERA5 is the fifth generation ECMWF reanalysis for the global climate and weather.
   Data is available from 1940 onwards.
-  we propose a selection of the original data based on the most popular datasets and variables within
+  we propose a selection of the original data based on the most popular datasets and variables
 edh:maturity: published
 links:
 - title: ERA5 documentation
