--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
@@ -14,7 +14,7 @@ properties:
   DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`) 
   from the IFS-NEMO model at high resolution on pressure levels
   dc:access_rights: free of charge
-  dc:title: High resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
+  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, hourly data on pressure-levels, HR
   dc:description: High resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2029-12-31T23:00:00Z'
