--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
@@ -13,7 +13,7 @@ properties:
   dc:abstract: This dataset contains a selection of the variables available from the 
   DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`) 
   from the ICON model at high resolution on surface levels
-  dc:title: High resolution Climate DT hourly on single levels - SSP3-7.0 - ICON
+  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, ICON, hourly data on single-levels
   dc:description: High resolution Climate DT hourly on single levels - SSP3-7.0 -
     ICON
   start_datetime: '2021-01-01T00:00:00Z'
