--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-standard-pl/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-standard-pl/__item__.yaml
@@ -10,9 +10,7 @@ bbox:
 - 90.0
 properties:
   edh:maturity: draft
-  dc:abstract: This dataset contains a selection of the variables available from the 
-  DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`) 
-  from the IFS-NEMO model at standard resolution on pressure levels
+  dc:abstract: This dataset contains a selection of the variables available from the  DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`)  from the IFS-NEMO model at standard resolution on pressure levels
   dc:access_rights: free of charge
   dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, hourly data on pressure-levels
   dc:description: Standard resolution Climate DT on pressure levels - SSP3-7.0 - IFS-NEMO
