RE-publish teh ICON collection

--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/__collection__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/__collection__.yaml
@@ -5,7 +5,7 @@ dc:abstract:
   timescales, at scales at which the impacts of climate change are observed. 
   This initiative presents the first ever attempt to operationalise the production of 
   global multi-decadal climate projections at km-scale resolutions of 5 to 10km.
-edh:maturity: draft
+edh:maturity: published
 links:
 - title: DestinE Digital Twin for Climate Change Adaptation
   rel: derived_from
