--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
@@ -10,10 +10,14 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:abstract: This dataset contains a selection of the variables available from the  DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`)  from the IFS-NEMO model at high resolution on ocean variables
+  dc:abstract: This dataset contains a selection of the variables available from the  DestinE
+    Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`)  from
+    the IFS-NEMO model at high resolution on ocean variables
   dc:access_rights: free of charge
-  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, daily data on ocean and sea-ice, HR
-  dc:description: High resolution Climate DT daily on ocean single levels - SSP3-7.0 - IFS-NEMO
+  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, daily data on ocean and sea-ice,
+    HR
+  dc:description: High resolution Climate DT daily on ocean single levels - SSP3-7.0
+    - IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
   end_datetime: '2029-12-31T00:00:00Z'
   dc:subject:
@@ -106,7 +110,7 @@ properties:
   dc:extent: 3.9 TB
 assets:
   data:
-    href: https://data.earthdatahub.com/destine-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0.zarr
+    href: https://data.earthdatahub.com/d1-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-o2d-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
