--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
@@ -10,9 +10,12 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:abstract: This dataset contains a selection of the variables available from the DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`) from the IFS-NEMO model at high resolution on surface levels
+  dc:abstract: This dataset contains a selection of the variables available from the
+    DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment
+    `SSP3-7.0`) from the IFS-NEMO model at high resolution on surface levels
   dc:access_rights: free of charge
-  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, hourly data on single-levels, HR
+  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, hourly data on single-levels,
+    HR
   dc:description: High resolution Climate DT hourly on single levels - SSP3-7.0 -
     IFS-NEMO
   start_datetime: '2020-01-01T00:00:00Z'
@@ -104,10 +107,10 @@ properties:
       type: data
       description: 10 metre V wind component
       unit: m s**-1
-  dc:extent: 82.4 TB
+  dc:extent: 141.2 TB
 assets:
   data:
-    href: https://data.earthdatahub.com/destine-climate-dt/SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
+    href: https://data.earthdatahub.com/d1-climate-dt/ScenarioMIP-SSP3-7.0-IFS-NEMO-0001-high-sfc-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
