--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -14,8 +14,9 @@ bbox:
 - 90.0
 properties:
   edh:maturity: published
-  dc:abstract: ERA5-Land is a reanalysis dataset providing a consistent view of the evolution of land variables
-    over several decades at an enhanced resolution compared to ERA5.
+  dc:abstract: ERA5-Land is a reanalysis dataset providing a consistent view of the
+    evolution of land variables over several decades at an enhanced resolution compared
+    to ERA5.
   dc:title: ERA5-Land hourly data
   start_datetime: '1950-01-01T00:00:00Z'
   end_datetime: '2023-12-31T23:00:00Z'
@@ -168,7 +169,7 @@ properties:
   dc:extent: 206.2 TB
 assets:
   data:
-    href: https://data.earthdatahub.com/era5/reanalysis-era5-land-no-antartica-v1.zarr
+    href: https://data.earthdatahub.com/era5/reanalysis-era5-land-no-antartica-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
