--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
@@ -9,16 +9,16 @@ bbox:
 - 180.0
 - 90.0
 properties:
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: This dataset contains a selection of the variables available from the
-    DestinE Climate DT future projection simulation (activity `ScenarioMIP`, experiment
-    `SSP3-7.0`) from the ICON model at high resolution on surface levels
-  dc:title: Climate DT, ScenarioMIP, SSP3-7.0, ICON, hourly data on single-levels
+    DestinE Climate DT future projection simulation (activity `story-nudging`, experiment
+    `Tplus2.0K`) from the IFS-FESOM model at high resolution on surface levels
+  dc:title: Climate DT, story-nudging, Tplus2.0K, IFS-FESOM, hourly data on single-levels
   dc:access_rights: free of charge
-  dc:description: High resolution Climate DT hourly on single levels - SSP3-7.0 -
-    ICON
-  start_datetime: '2021-01-01T00:00:00Z'
-  end_datetime: '2030-12-31T23:00:00Z'
+  dc:description: High resolution Climate DT hourly on single levels - Tplus2.0K -
+    IFS-FESOM
+  start_datetime: '2017-01-01T00:00:00Z'
+  end_datetime: '2018-12-31T23:00:00Z'
   dc:subject:
   - DestinE
   - ECMWF
@@ -50,18 +50,10 @@ properties:
       type: data
       description: 2 metre temperature
       unit: K
-    tprate:
-      dimensions:
-      - time
-      - latitude
-      - longitude
-      type: data
-      description: Total precipitation rate
-      unit: kg m**-2 s**-1
-  dc:extent: 23.5 TB
+  dc:extent: 588 GB
 assets:
   data:
-    href: https://data.earthdatahub.com/d1-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-v0.zarr
+    href: https://data.earthdatahub.com/d1-climate-dt/story-nudging-Tplus2.0K-IFS-FESOM-0001-high-sfc-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
@@ -70,4 +62,4 @@ assets:
     xarray:storage_options:
       client_kwargs:
         trust_env: true
-search_weight: 80
+search_weight: 40
