No need for high resolution thumbnail

--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/plots.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/plots.yaml
@@ -2,6 +2,7 @@ plots:
 - var: "t2m"
   time_dim: "time"
   selection: {"time": 2515}
+  coarsen: {latitude: 8, longitude: 8}
   plot_kwargs: {
     'vmax':318,
     'vmin':228,
