Add one year to full 2035

--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/plots.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/plots.yaml
@@ -1,8 +1,9 @@
 plots:
 - var: "avg_tos"
-  selection: {'time':0}
+  time_dim: "time"
+  selection: {'time': 1000}
   plot_kwargs: {
-    'vmax':320,
-    'vmin':130,
+    'vmax':308,
+    'vmin':268,
     'cmap':"RdBu_r"
   }
