--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/plots.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/plots.yaml
@@ -2,6 +2,7 @@ plots:
 - var: "avg_tos"
   time_dim: "time"
   selection: {'time': 1000}
+  coarsen: {latitude: 2, longitude: 2}
   plot_kwargs: {
     'vmax':308,
     'vmin':268,
