--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -89,7 +89,7 @@ properties:
   dc:extent: 15.3 TB
 assets:
   data:
-    href: https://data.earthdatahub.com/era5/reanalysis-era5-single-levels-v0.zarr
+    href: https://data.earthdatahub.destine.eu/era5/reanalysis-era5-single-levels-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
