convert existing dates intervals into strings

--- a/catalogue/egg4/cams-global-ghg-reanalysis-egg4/ingestion/ingestion-steps.yaml
+++ b/catalogue/egg4/cams-global-ghg-reanalysis-egg4/ingestion/ingestion-steps.yaml
@@ -13,7 +13,7 @@ steps:
     filename_or_obj:
       area: ['90', '0', '-90', '360']
       dataset: 'cams-global-ghg-reanalysis-egg4'
-      date: [2003-01-02/2020-12-31]
+      date: ["2003-01-02/2020-12-31"]
       step: ['0', '3', '6', '9', '12', '15', '18', '21']
       time: ['00:00', '03:00', '06:00', '09:00', '12:00', '15:00', '18:00', '21:00']
       variable: [
