--- a/catalogue/copernicus-dem/templates/GLO-30-UTM/GLO-30-UTM-{{cookiecutter.utm_zone}}/__item__.yaml
+++ b/catalogue/copernicus-dem/templates/GLO-30-UTM/GLO-30-UTM-{{cookiecutter.utm_zone}}/__item__.yaml
@@ -50,7 +50,7 @@ properties:
       type: data
       description: ECEF coordinates of surface model
       unit: m
-  dc:extent: 1,280.0 GiB
+  dc:extent: 1.3 TB
 assets:
   data:
     href: https://data.earthdatahub.com/copernicus-dem/GLO-30-UTM-{{ cookiecutter.utm_zone }}-v0.zarr
@@ -59,6 +59,7 @@ assets:
     xarray:open_kwargs:
       engine: zarr
       chunks: {}
+      decode_coords: all
     xarray:storage_options:
       client_kwargs:
         trust_env: true
