--- a/catalogue/copernicus-dem/GLO-90/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-90/__item__.yaml
@@ -23,12 +23,12 @@ properties:
   - Copernicus
   - DEM
   cube:dimensions:
-    latitude:
+    lat:
       type: spatial
       axis: y
       reference_system: 4326
       step: 0.00083
-    longitude:
+    lon:
       type: spatial
       axis: x
       reference_system: 4326
@@ -44,7 +44,7 @@ properties:
   dc:extent: 373 GB
 assets:
   data:
-    href: https://data.earthdatahub.com/copernicus-dem/GLO-90-v0.zarr
+    href: https://data.earthdatahub.com/copernicus-dem/GLO-90-v1.zarr
     roles:
     - data
     xarray:open_kwargs:
