Revert "convert existing dates intervals into strings"
This reverts commit 0d524ccd0112cdf6e837523f25cd6e4f183b59eb.

--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/ingestion/ingestion-steps.yaml
@@ -8,7 +8,7 @@ steps:
       activity: story-nudging
       class: d1
       dataset: climate-dt
-      date: [ "2017-01-01/to/2018-12-31" ]
+      date: [ 2017-01-01/to/2018-12-31 ]
       experiment: Tplus2.0K
       expver: 0001
       generation: 1
