--- a/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/ingestion-steps.yaml
@@ -9,7 +9,7 @@ steps:
     filename_or_obj:
       area: ['90', '0', '-90', '360']
       collection_id: reanalysis-era5-pressure-levels
-      date: ["1940-01-01/2023-12-31"]
+      date: [1940-01-01/2023-12-31]
       time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
       product_type: reanalysis
       pressure_level: [1000, 925, 850, 700, 600, 500, 400, 300, 250, 200, 150, 100, 70, 50, 30, 20, 10, 5, 1]
