--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-standard-sfc/ingestion/ingestion-steps.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-standard-sfc/ingestion/ingestion-steps.yaml
@@ -8,7 +8,7 @@ steps:
       activity: ScenarioMIP
       class: d1
       dataset: climate-dt
-      date: [ "2020-01-01/to/2029-09-08" ]
+      date: [ 2020-01-01/to/2029-09-08 ]
       experiment: SSP3-7.0
       expver: '0001'
       generation: 1
