--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -38,11 +38,13 @@ properties:
     latitude:
       type: spatial
       axis: "y"
+      extent: [-90, 90]
       reference_system: 4326
       step: 0.25
     longitude:
       type: spatial
       axis: x
+      extent: [-180, 180]
       reference_system: 4326
       step: 0.25
   cube:variables:
