--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-sfc/__item__.yaml
@@ -35,11 +35,13 @@ properties:
     latitude:
       type: spatial
       axis: y
+      extent: [-90, 90]
       reference_system: 4326
       step: 0.044
     longitude:
       type: spatial
       axis: x
+      extent: [-180, 180]
       reference_system: 4326
       step: 0.044
   cube:variables:
