--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -37,7 +37,7 @@ properties:
       step: PT1H
     latitude:
       type: spatial
-      axis: "y"
+      axis: y
       extent: [-90, 90]
       reference_system: 4326
       step: 0.25
