--- a/catalogue/copernicus-dem/GLO-30/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-30/__item__.yaml
@@ -28,11 +28,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 2.8e-05
+      extent:
+      - -90.0
+      - 90.0
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 2.8e-05
+      extent:
+      - -180.0
+      - 180.0
   cube:variables:
     dsm:
       dimensions:
