--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
@@ -35,12 +35,18 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
-      step: 0.044
+      step: 0.088
+      extent:
+      - -90.0
+      - 90.0
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
-      step: 0.044
+      step: 0.088
+      extent:
+      - -180.0
+      - 180.0
   cube:variables:
     t2m:
       dimensions:
