--- a/catalogue/destine-extreme-dt/i7yv-open-single-levels/__item__.yaml
+++ b/catalogue/destine-extreme-dt/i7yv-open-single-levels/__item__.yaml
@@ -29,12 +29,18 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
-      step: 0.035
+      step: 0.044
+      extent:
+      - 90.0
+      - -90.0
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
-      step: 0.035
+      step: 0.044
+      extent:
+      - 0.0
+      - 360.0
   cube:variables:
     d2m:
       dimensions:
