--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -33,12 +33,18 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
-      step: 0.01
+      step: 0.4
+      extent:
+      - 90.0
+      - -90.0
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
-      step: 0.01
+      step: 0.4
+      extent:
+      - -180.0
+      - 179.6
   cube:variables:
     10u:
       dimensions:
