--- a/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
+++ b/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
@@ -40,11 +40,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.75
+      extent:
+      - 90.0
+      - -90.0
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.75
+      extent:
+      - 0.0
+      - 359.2
   cube:variables:
     tcch4:
       dimensions:
