--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -41,11 +41,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.25
+      extent:
+      - 90.0
+      - -90.0
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.25
+      extent:
+      - 0.0
+      - 359.8
   cube:variables:
     t2m:
       dimensions:
