--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -40,11 +40,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 90.0
+      - -57.1
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - 0.0
+      - 359.9
   cube:variables:
     asn:
       dimensions:
