--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -38,13 +38,17 @@ properties:
     latitude:
       type: spatial
       axis: y
-      extent: [-90, 90]
+      extent:
+      - 90.0
+      - -90.0
       reference_system: 4326
       step: 0.25
     longitude:
       type: spatial
       axis: x
-      extent: [0, 359.8]
+      extent:
+      - 0.0
+      - 359.8
       reference_system: 4326
       step: 0.25
   cube:variables:
