--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/__item__.yaml
@@ -36,11 +36,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.044
+      extent:
+      - -90.0
+      - 90.0
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.044
+      extent:
+      - -180.0
+      - 180.0
   cube:variables:
     t:
       dimensions:
