--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-standard-sfc/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-standard-sfc/__item__.yaml
@@ -35,11 +35,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.352
+      extent:
+      - -90.0
+      - 90.0
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.351
+      extent:
+      - -180.0
+      - 180.0
   cube:variables:
     blh:
       dimensions:
