Update S and fix 20m for N

--- a/catalogue/copernicus-dem/templates/GLO-30-UTM-S/contexts.yaml
+++ b/catalogue/copernicus-dem/templates/GLO-30-UTM-S/contexts.yaml
@@ -1,7 +1,7 @@
 contexts:
-- utm_zone: 29N
-- utm_zone: 30N
-- utm_zone: 31N
-- utm_zone: 32N
-- utm_zone: 33N
-- utm_zone: 34N
+- utm_zone: 29S
+- utm_zone: 30S
+- utm_zone: 31S
+- utm_zone: 32S
+- utm_zone: 33S
+- utm_zone: 34S
