--- a/catalogue/copernicus-dem/GLO-90/__item__.yaml
+++ b/catalogue/copernicus-dem/GLO-90/__item__.yaml
@@ -56,6 +56,8 @@ assets:
     xarray:open_kwargs:
       engine: zarr
       chunks: {}
+      mask_and_scale: false
+      decode_coords: all
     xarray:storage_options:
       client_kwargs:
         trust_env: true
